# django-namedid

./: README.md  manage.py  pyproject.toml
docs/: AI.md  README.md  development.md  purpose.md  structure.md
src/namedid/: __init__.py  decorators.py  fields.py
tests/: test_fields.py
tests/app/: models.py
