[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-namedid"
version = "0.2.2"
description = "Django field that combines multiple fields into a unique identifier with collision handling"
readme = "README.md"
authors = [{ name = "Octolo", email = "dev@octolo.tech" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = [
    "django",
    "django-field",
    "unique-identifier",
    "composite-field",
    "named-id",
    "slug-generation",
    "django-orm",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Django>=3.2",
]

[project.urls]
Homepage = "https://github.com/octolo/django-namedid"
Repository = "https://github.com/octolo/django-namedid"
Documentation = "https://github.com/octolo/django-namedid#readme"
Issues = "https://github.com/octolo/django-namedid/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.5",
    "ruff>=0.5",
    "mypy>=1.0",
    "django-stubs>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["namedid*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
plugins = ["mypy_django_plugin.main"]
mypy_path = "src"

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.ruff]
line-length = 100
target-version = "py310"

